8288377: Offset calculation fix for DST with custom TZ.

8288377: Offset calculation fix for DST with custom TZ.