src/java.base/unix/native/libjava/TimeZone_md.c
@@ -553,6 +553,29 @@ findJavaTZ_md(const char *java_home_dir)
 }
 
 /**
+ * Used to calculate the offset between two tm structs.
+ */
+static time_t
+calculateTimeOffset(struct tm tm1, struct tm tm2)
+{
+    time_t offset;
+    const int seconds_per_minute = 60;
+    const int seconds_per_hour = seconds_per_minute * 60;
+    const int seconds_per_day = seconds_per_hour * 24;
+    // The conversion of years and months is not important, as offset should never exceed a day.
+    const int seconds_per_month = seconds_per_day * 31;
+    const int seconds_per_year = seconds_per_month * 12;
+
+    // Apply mod to the result in order to normalize offset result to be under a day.
+    offset = ((tm1.tm_year - tm2.tm_year) * seconds_per_year +
+        (tm1.tm_mon - tm2.tm_mon) * seconds_per_month +
+        (tm1.tm_mday - tm2.tm_mday) * seconds_per_day +
+        (tm1.tm_hour - tm2.tm_hour) * seconds_per_hour +
+        (tm1.tm_min - tm2.tm_min) * seconds_per_minute) % seconds_per_day;
+    return offset;
+}
+
+/**
  * Returns a GMT-offset-based zone ID. (e.g., "GMT-08:00")
  */
 
@@ -592,18 +615,31 @@ getGMTOffsetID()
 {
     time_t offset;
     char sign, buf[32];
-    offset = timezone;
+    struct tm localtm;
+    time_t clock;
+
+    clock = time(NULL);
+    if (localtime_r(&clock, &localtm) == NULL) {
+        return strdup("GMT");
+    }
+
+    struct tm gmt;
+
+    if (gmtime_r(&clock, &gmt) == NULL) {
+        return strdup("GMT");
+    }
+
+    offset = calculateTimeOffset(localtm, gmt);
 
     if (offset == 0) {
         return strdup("GMT");
     }
 
-    /* Note that the time offset direction is opposite. */
     if (offset > 0) {
-        sign = '-';
+        sign = '+';
     } else {
         offset = -offset;
-        sign = '+';
+        sign = '-';
     }
     sprintf(buf, (const char *)"GMT%c%02d:%02d",
             sign, (int)(offset/3600), (int)((offset%3600)/60));
